[tool.poetry]
name = "tesp-api"
version = "0.0.1"
license = "MIT"
description = "An implementation of a task execution engine based on the TES standard running on Pulsar"
authors = ["Norbert Dopjera <ndopjera@gmail.com>"]
maintainers = ["Norbert Dopjera <ndopjera@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ndopj/tesp-api"

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.75.1"
orjson = "^3.6.8"
gunicorn = "^20.1.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
dynaconf = "^3.1.8"
motor = "^2.5.1"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
aioftp = "^0.21.0"
PyMonad =  "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
